Work on Rate and Review, Need Testings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="drawer_close">Close</string>
     <string name="action_settings">Settings</string>
 
+    <string name="rate_review">
+        This tour is due, please rate the tour in order to claim your reward.
+    </string>
     <array name="time_format">
         <item>Hour/s</item>
         <item>Day/s</item>
